# easyTemplateApp

./: .gitignore  .project.pyproject  .project.qmlproject  .python.pyproject  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
App/: Release.yml  main.py  setup.py
App/Gui/: main.qml
App/Gui/Components/: ApplicationWindow.qml  ApplicationWindow2.qml  qmldir
App/Gui/Globals/: Constants.qml  Variables.qml
App/Gui/Pages/Analysis/: MainAreaCifEdit.qml  MainAreaStructureView.qml  SideBarAdvanced.qml  SideBarBasic.qml  qmldir
App/Gui/Pages/Experiment/: MainAreaCifEdit.qml  MainAreaStructureView.qml  MainAreaTableView.qml  SideBarAdvanced.qml  SideBarBasic.qml
App/Gui/Pages/Home/: SideBarBasic.qml
App/Gui/Pages/Project/: MainAreaCifEdit.qml  MainAreaDescription.qml  SideBarAdvanced.qml
App/Gui/Pages/Project_/: MainArea.qml  SideBar.qml  qmldir
App/Gui/Pages/Project_/MainAreaContent/: Description.qml
App/Gui/Pages/Project_/SideBarContent/: Advanced.qml  Basic.qml
App/Gui/Pages/Sample/: MainAreaCifEdit.qml  MainAreaStructureView.qml  SideBarAdvanced.qml  SideBarBasic.qml  qmldir
App/Gui/Pages/Summary/: MainAreaReport.qml  SideBarAdvanced.qml  SideBarBasic.qml
App/Logic/: PyQmlProxy.py
App/easyAppGui/Animations/: ThemeChange.qml  TranslationChange.qml
App/easyAppGui/Components/: ApplicationBar.qml  ApplicationWindow.qml  PreferencesDialog.qml  StatusBar.qml  qmldir
App/easyAppGui/Elements/: ApplicationWindow.qml  BoxShadow.qml  Button.qml  CheckBox.qml  CheckIndicator.qml  ComboBox.qml  CursorDelegate.qml  Dialog.qml  DialogButtonBox.qml  ElevationEffect.qml  Label.qml  MenuItem.qml  Popup.qml  RadioButton.qml  RadioIndicator.qml  RectangularGlow.qml  ScrollIndicator.qml  StatusBar.qml  TabButton.qml  TextArea.qml  TextField.qml  ToolBar.qml  ToolButton.qml  ToolTip.qml  qmldir
App/easyAppGui/Globals/: Variables.qml
App/easyAppGui/Style/: Colors.qml  Fonts.qml  Sizes.qml  qmldir
App/easyInterfacingGui/Elements/: ApplicationWindow.qml  Button.qml
App/easyInterfacingGui/Style/: Sizes.qml
Tools/Scripts/: FreezeApp.py  Functions.py  InstallPyPackages.py  MakeInstaller.py  ZipArtifacts.py
easyTemplate/: main.py
easyTemplate/Gui/: main.qml
easyTemplate/Gui/Components/: ApplicationWindow.qml  ApplicationWindow2.qml
easyTemplate/Gui/Globals/: Constants.qml  Variables.qml
easyTemplate/Gui/Pages/Analysis/: MainContentFitting.qml  MainContentStructureView.qml  SideBarAdvanced.qml  SideBarBasic.qml  qmldir
easyTemplate/Gui/Pages/Experiment/: MainContentPlotView.qml  MainContentStructureView.qml  SideBarBasic.qml  qmldir
easyTemplate/Gui/Pages/Home/: MainAreaDescription.qml  SideBarBasic.qml  qmldir
easyTemplate/Gui/Pages/Project/: MainAreaCifEdit.qml  qmldir
easyTemplate/Gui/Pages/Project_/MainAreaContent/: qmldir
easyTemplate/Gui/Pages/Project_/SideBarContent/: Advanced.qml  Basic.qml  qmldir
easyTemplate/Gui/Pages/Sample/: MainAreaCifEdit.qml  MainAreaStructureView.qml  SideBarBasic.qml
easyTemplate/Gui/Pages/Summary/: MainAreaReport.qml  SideBarAdvanced.qml  SideBarBasic.qml  qmldir
easyTemplate/Logic/: PyQmlProxy.py
easyTemplate/Logic/DisplayModels/: CalculatedDataModel.py  DataModels.py  MeasuredDataModel.py
easyTemplateApp/: main.py
easyTemplateApp/Gui/: main.qml
easyTemplateApp/Gui/Components/: ApplicationWindow.qml  DataChartView.qml
easyTemplateApp/Gui/Globals/: Variables.qml
easyTemplateApp/Gui/Pages/Analysis/: MainContentFitting.qml  SideBarAdvanced.qml  SideBarBasic.qml
easyTemplateApp/Gui/Pages/Experiment/: MainContentPlotView.qml  SideBarBasic.qml
easyTemplateApp/Gui/Pages/Home/: MainContent.qml
easyTemplateApp/Gui/Pages/Project/: MainContentDescription.qml  SideBarBasic.qml
easyTemplateApp/Gui/Pages/Sample/: MainContentStructureView.qml  MainContentVTK.qml  SideBarBasic.qml  qmldir
easyTemplateApp/Logic/: PyQmlProxy.py  QtInterface.py
easyTemplateApp/Logic/DisplayModels/: DataModels.py
easyTemplateApp/VTK/ctrls/: mainCtrl.py  mainHelper.py
easyTemplateApp/VTK/graphics/engines/: fbo.py  fboRenderer.py  processingEngine.py
easyTemplateApp/VTK/graphics/vtkModels/: interactorStyleModel.py  polyDataModel.py  rendererModel.py
easyTemplateApp/VTK/models/: businessModel.py
easyTemplateApp/VTK/utils/: funcs.py
